--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,30 @@
     <groupId>edu.fhda</groupId>
     <artifactId>log4j-papertrail-appender</artifactId>
     <version>1.0</version>
+    <packaging>jar</packaging>
+
+    <name>Papertrail Appender for Log4j</name>
+    <description>A Log4j appender that uses TCP over TLS to send log messages to the cloud logging service Papertrail (papetrailapp.com)</description>
+    <url>https://github.com/mrapczynski/log4j-papertrail-appender</url>
+
+    <developers>
+        <developer>
+            <name>Matt Rapczynski</name>
+            <url>https://github.com/mrapczynski/log4j-papertrail-appender</url>
+        </developer>
+    </developers>
+
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <scm>
+        <url>https://github.com/mrapczynski/log4j-papertrail-appender</url>
+    </scm>
 
     <dependencies>
         <dependency>
@@ -15,6 +39,30 @@
             <version>1.2.17</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
