--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,12 @@
     <version>1.0</version>
     <packaging>jar</packaging>
 
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
+
     <name>Papertrail Appender for Log4j</name>
     <description>A Log4j appender that uses TCP over TLS to send log messages to the cloud logging service Papertrail (papetrailapp.com)</description>
     <url>https://github.com/mrapczynski/log4j-papertrail-appender</url>
@@ -29,7 +35,9 @@
     </licenses>
 
     <scm>
-        <url>https://github.com/mrapczynski/log4j-papertrail-appender</url>
+        <connection>scm:git:git@github.com:mrapczynski/log4j-papertrail-appender.git</connection>
+        <developerConnection>scm:git:git@github.com:mrapczynski/log4j-papertrail-appender</developerConnection>
+        <url>git@github.com:mrapczynski/log4j-papertrail-appender</url>
     </scm>
 
     <dependencies>
@@ -46,23 +54,5 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-gpg-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>sign-artifacts</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>sign</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
